1. Метод .of [#407223]