@@ -1,7 +1,6 @@
 package ru.job4j.tracker.collection;
 
 import org.junit.Test;
-import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -15,9 +14,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
@@ -30,9 +27,7 @@ public class ConvertMatrix2ListTest {
                 {4, 5, 6},
                 {7},
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
