@@ -3,7 +3,6 @@ package ru.job4j.tracker.collection.search;
 import org.junit.Test;
 import ru.job4j.tracker.collection.Account;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 
@@ -14,12 +13,12 @@ public class NotifyAccountTest {
 
     @Test
     public void sentWhenDuplicateAccount() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("0001250254", "Ilya", "100000"),
                 new Account("0025500365", "Victor", "50000"),
                 new Account("0001250254", "Ilya", "25000")
         );
-        HashSet<Account> expected = new HashSet<>(Arrays.asList(
+        HashSet<Account> expected = new HashSet<>(List.of(
                 new Account("0001250254", "Ilya", "100000"),
                 new Account("0025500365", "Victor", "50000"))
         );
@@ -28,7 +27,7 @@ public class NotifyAccountTest {
 
     @Test
     public void whenDeleteAccount() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("0001250254", "Ilya", "100000"),
                 new Account("0025500365", "Victor", "50000"),
                 new Account("0001250254", "Ilya", "25000")
